# rust-full-stack

./: .gitignore  Cargo.toml  Makefile.toml  Shuttle.toml
api/lib/: Cargo.toml
api/lib/src/: films.rs  health.rs  lib.rs
api/lib/src/film_repository/: mod.rs
api/lib/tests/: heath.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
front/: Cargo.toml  Dioxus.toml  package-lock.json  tailwind.config.js
front/public/: tailwind.css
front/src/: main.rs
front/src/components/: button.rs  film_card.rs  film_modal.rs  footer.rs  header.rs  mod.rs
front/src/models/: button.rs
shared/: Cargo.toml
shared/src/: models.rs
