[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.3.4", features = ["serde", "v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", default-features = false, features = [
  "tls-native-tls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "json",
], optional = true }

[features]
backend = ["sqlx"]
