[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix
actix-web = "4.3.1"
# database
sqlx = { version = "0.7", default-features = false, features = [
  "tls-native-tls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }
# tracing
tracing = "0.1"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
actix-rt = "2.9.0"
