[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix
actix-web = "4.3.1"
# database
sqlx = { version = "0.7", default-features = false, features = [
  "tls-native-tls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }
# tracing
shared = { path = "../../shared", features = ["backend"] }
tracing = "0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
async-trait = { version = "0.1.68" }
uuid = { version = "1.8.0", features = ["serde", "v4", "js"] }


[dev-dependencies]
actix-rt = "2.9.0"
