[package]
name = "rust-full-stack"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.43.0"
shuttle-runtime = "0.43.0"
tokio = "1.26.0"

# database
shuttle-shared-db = { version = "0.43.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.1", default-features = false, features = [
  "tls-native-tls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }
tracing = "0.1"
# static
actix-files = "0.6.2"
api-lib = { path = "../lib" }
